--- a/HelloNuGet/HelloNuGet.csproj
+++ b/HelloNuGet/HelloNuGet.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Authors>KBaluh</Authors>
-    <Company>KEnterprise</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Kostya.Balukh</Authors>
+    <PackageId>KBaluh.HelloNuGet</PackageId>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
